--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,40 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion AndroidConfig.COMPILE_SDK_VERSION
+    buildToolsVersion AndroidConfig.BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId "com.joancolmenerodev.github_organization_searcher"
-        minSdkVersion 22
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId AndroidConfig.APPLICATION_ID
+        minSdkVersion AndroidConfig.MIN_SDK_VERSION
+        targetSdkVersion AndroidConfig.TARGET_SDK_VERSION
+        versionCode AndroidConfig.VERSION_CODE
+        versionName AndroidConfig.VERSION_NAME
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            debuggable false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
+
+        debug {
+            minifyEnabled false
+            debuggable true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
 }
@@ -28,10 +42,25 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api(AndroidDependencies.SUPPORT_CONSTRAINT_LAYOUT)
+    api(AndroidDependencies.COORDINATOR_LAYOUT)
+    api(AndroidDependencies.RECYCLERVIEW)
+    api(AndroidDependencies.MATERIAL)
+
+    implementation(LibrariesDependencies.RETROFIT_LOGGING_INTERCEPTOR)
+    api(LibrariesDependencies.RETROFIT)
+    api(LibrariesDependencies.DAGGER)
+    api(LibrariesDependencies.DAGGER_ANDROID)
+    api(LibrariesDependencies.DAGGER_ANDROID_SUPPORT)
+    kapt LibrariesDependencies.DAGGER_ANDROID_KAPT
+    kapt LibrariesDependencies.DAGGER_KAPT
+    kapt LibrariesDependencies.DAGGER_ANNOTATION_PROCESSOR
+    kaptAndroidTest LibrariesDependencies.DAGGER_ANDROID
+
+    androidTestImplementation TestLibraryDependencies.espressoCore
+    androidTestImplementation TestLibraryDependencies.espressoContrib
+    androidTestImplementation TestLibraryDependencies.espressoIntents
+    androidTestImplementation TestLibraryDependencies.okhttp3IdlingResources
+
+    implementation project(ModuleDependencies.LIBRARY_BASE)
 }
