Creating activity for the list of repositories by organization and adding a startActivity from Splash to that activity

--- a/organization_searcher/src/main/AndroidManifest.xml
+++ b/organization_searcher/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.joancolmenerodev.organization_searcher" />
+    package="com.joancolmenerodev.organization_searcher">
+
+    <application>
+        <activity android:name=".feature.organization_list.presentation.RepositoryByOrganizationSearcherActivity"></activity>
+    </application>
+
+</manifest>
