--- a/organization_searcher/build.gradle
+++ b/organization_searcher/build.gradle
@@ -40,6 +40,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt LibrariesDependencies.DAGGER_ANDROID_KAPT
     kapt LibrariesDependencies.DAGGER_KAPT
     kapt LibrariesDependencies.DAGGER_ANNOTATION_PROCESSOR
