Adding Room, fixing DI problems and implementing no internet connection mechanishm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,8 @@ dependencies {
 
     implementation project(ModuleDependencies.LIBRARY_BASE)
     implementation project(ModuleDependencies.NETWORKING)
+    implementation project(ModuleDependencies.PERSISTENCE)
     implementation project(ModuleDependencies.ORGANIZATION_SEARCHER)
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
 }
