--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     api LibrariesDependencies.GLIDE
     api LibrariesDependencies.ROOM_KTX
     api LibrariesDependencies.ROOM_RUNTIME
+    api LibrariesDependencies.LOTTIE
 
     api TestLibraryDependencies.kotlinxCoroutinestest
     api TestLibraryDependencies.jUnit
