Add integration test for the api service

--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     api TestLibraryDependencies.jUnit
     api TestLibraryDependencies.mockK
     api TestLibraryDependencies.testRunner
+    api TestLibraryDependencies.mockWebServer
 }
